# AIMS

./: .readthedocs.yaml  AIMS_notebook.ipynb  MANIFEST.in  README.md  aims_analysis.py  aims_classification.py  aims_cli.py  aims_loader.py  aims_run.sh  pyproject.toml  seq_loader.py
aims_immune/: __init__.py  __main__.py  aims.py  aims_analysis.py  aims_classification.py  aims_cli.py  aims_loader.py  get_tests.py  launch_notebook.py
aims_immune/app_data/: AA_interactionV1.csv  AA_interactionV3.csv  old_props  property_names.txt
app/: AIMS.kv  AIMS.py  aims.kv  aims.py  aims_analysis.py  aims_classification.py  aims_loader.py  install_packages.sh
app/MSA_testData/: AIMS_dist_input.txt  DIP_interface.csv  Dpr_interface.csv  cognate_list.txt  noncognate_list.txt
app/ab_testData/: flu_mono_heavy.csv  flu_poly_h3.csv
app/app_data/: error_load.ai  new_props
app/mhc_testData/: UAA_seqs.fasta  UDA_seqs.fasta  cd1_seqs.fasta  cd1_ufa_genes.fasta  ex_cd1_hla.csv  ex_cd1d_hla.csv  ex_cd1d_hla_uda_uaa_ji.csv  ex_cd1d_hla_ufa_ji.csv  hlaA_seqs.fasta  ji_cartFish.fasta
app_data/: AA_interactionV2.csv  cd1.fasta  classIa.fasta  dash_format.csv  dash_format_cdr3.csv  flu_mono.csv  flu_poly.csv  gliph_hlaA2_ebv.csv  gliph_hlaA2_flu.csv  pancreas_hla_atlas.csv  property_names.txt  vdjdb_seqs_parse.csv
app_data/SabDab_data/: adimab_SabDabdata.csv  extract_data.sh  non_adimab_data.csv  non_adimab_dataHu.csv
app_data/adimab_data/: GetCDRs_AA.ipynb  cdrs_L_final.txt  drug_outcomes.csv  drug_outcomes.xlsx  drug_properties.csv  drug_properties.csv~  drug_properties.xlsx  drug_seqs.csv  drug_seqs.xlsx  extract_data.sh  human_IGHJ.txt  human_IGKJ.txt  human_IGLJ.txt
app_data/alignments/: 0README  all_genes_human.aln  all_genes_lite_human.aln  all_genes_mouse.aln  all_genes_mouseLIGHT.aln
app_data/full_sequences/: README.md  flu_NumReact.txt  flu_fastaH.txt  (+13 more)
bootstrap_scripts/: aims_bootstrap.py  midway_bootstrap.py  midway_bootstrap_THERA.py  midway_bootstrap_null.py  midway_bootstrap_permute.py  parallel.sbatch
germline_data/: classII_alpha.fasta  classII_beta.fasta  classIIa_names.csv  classIIb_names.csv  travnames.csv  trbv_mouse_cdrs.csv  trbv_rhesus_cdrs.csv  trbvnames.csv
notebooks/: AIMS_MSA.ipynb  AIMS_mhc.ipynb  AIMS_notebook.ipynb  AIMS_peptide.ipynb  AIMS_single.ipynb  aims_analysis.ipynb  cleaner_bootstrap.ipynb  make_pretty_alignments.ipynb  manuscript_analysis.ipynb  mhc_germline_analysis.ipynb  therapeutic_analysis.ipynb
(+131 files in other folders)
