[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aims_immune"
version = "0.9.3"
authors = [
  { name="Chris Boughter", email="ctboughter@gmail.com" },
]
description = "A software for the analysis of immune repertoires"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.9"',
    'kivy>=2.1.0',
    'umap-learn==0.5.3',
    'biopython>=1.76',
    'scipy>=1.4.1',
    'pandas>=1.0.3',
    'numpy>=1.18.1',
    'matplotlib>=3.1.3',
    'scikit-learn>=0.22.1',
    'seaborn>=0.10.1',
    'jupyterlab>=3.1.12',
    'ipython>=7.27.0',
    'ipykernel>=5.5.5'
]

[project.urls]
"Homepage" = "https://github.com/ctboughter/aims"
"Bug Tracker" = "https://github.com/ctboughter/aims/issues"

[project.scripts]
aims-cli = "aims_immune.aims_cli:run"
aims-notebook = "aims_immune.launch_notebook:launchit"
aims-tests = "aims_immune.get_tests:getit"

[project.gui-scripts]
aims-gui = "aims_immune.aims:main"